<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Connecting...</string>
	<string name="app_name">K-Phone</string>

	<string name="sip_log">SIP Log</string>
	<string name="incoming_call">Calling ...</string>

	<!-- menu -->
	<string name="txt_preferences">Preferences</string>


	<string name="txt_conection_preferences">Conection Preferences</string>
	<string name="txt_local_preferences">Local</string>
	<string name="preference_local_username">Local SIP URL username</string>
	<string name="preference_local_username_summary">Local SIP URL username</string>
	<string name="preference_local_password">Local SIP URL password</string>
	<string name="preference_local_password_summary">Local SIP URL password</string>
	<string name="preference_local_domain">Local SIP URL domain</string>
	<string name="preference_local_domain_summary">Local SIP URL domain</string>
	<string name="preference_sip_local_port_range">SIP local port range</string>
	<string name="preference_sip_local_port_range_summary">Select SIP local port range</string>
	<string name="preference_sip_min_local_port">SIP min local port</string>
	<string name="preference_sip_min_local_port_summary">Select SIP min local port</string>
	<string name="preference_sip_max_local_port">SIP max local port</string>
	<string name="preference_sip_max_local_port_summary">Select SIP max local port</string>

	<string name="txt_videocall_preferences">VideoCall Preferences</string>

	<string name="txt_remote_preferences">Remote</string>
	<string name="preference_remote_username">Remote SIP URL username</string>
	<string name="preference_remote_username_summary">Remote SIP URL username we will send video</string>
	<string name="preference_remote_domain">Remote SIP URL domain</string>
	<string name="preference_remote_domain_summary">Remote SIP URL domain we will send video</string>

	<string name="txt_proxy_preferences">SIP Proxy Registar</string>
	<string name="preference_proxy_ip">SIP Proxy IP</string>
	<string name="preference_proxy_ip_summary">SIP Proxy IP where we will register</string>
	<string name="preference_proxy_port">SIP Proxy port</string>
	<string name="preference_proxy_port_summary">SIP Proxy TCP port where we will receive register
	</string>
	
	<string name="txt_call_type_preferences">Call Preferences</string>
	<string name="txt_video_preferences">Media Preferences</string>
	<string name="txt_stun_preferences">Stun Preferences</string>
	<string name="txt_video_codec_preferences">Video Codec</string>
	
	<string name="txt_menu_register">Register</string>
	
	<string name="txt_menu_about">About</string>

	<!-- <string name="txt_record">Record</string> <string name="txt_send_RTP">Send 
		RTP</string> -->

	<string name="txt_exit">Exit</string>
	<string name="incoming_sip">Unknown</string>
	<string name="outgoing_sip">Unknown</string>
	<string name="outgoing_call">Calling ...</string>
	<string name="welcome">Welcome to KurentoPhone. Please register your data.</string>
	<string name="ok_register">Save</string>
	<string name="cancel_register">Cancel</string>
	
	<string name="about_comments">Version: ${project.version} \nSDK Version: ${kurentoAndroidSdkVersion} \n${url}</string>
	<string name="txt_clear">Clear history</string>
	<string name="infoRemoteUri">Format SIP Uri</string>
	<string name="textInfoRemoteUri">Add text \n that has to explain \n how is the format</string>
	
	<string name="max_bw">Max bandwidth</string>
	<string name="max_bw_summary">Select max bandwidth</string>
	<string name="max_fr">Max frame rate</string>
	<string name="max_fr_summary">Select max frame rate</string>
	<string name="max_gop">Gop size</string>
	<string name="max_gop_summary">Select size between two I-frames</string>
	<string name="max_queue">Max Frame queue size</string>
	<string name="max_queue_summary">Select max frame queue size</string>
	
	<string name="stun_host">Stun host</string>
	<string name="summary_stun_host">Write a Stun host</string>
	
	<string name="stun_host_port">Stun port</string>
	<string name="summary_stun_host_port">Write a Stun port</string>
	

</resources>
