<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="Local Preferences">
		<EditTextPreference android:key="LOCAL_USERNAME"
			android:title="@string/preference_local_username" android:summary="@string/preference_local_username_summary"
			android:defaultValue="android1" android:singleLine="true"  />
		<EditTextPreference android:key="LOCAL_PASSWORD"
			android:title="@string/preference_local_password" android:summary="@string/preference_local_password_summary"
			android:defaultValue="" android:password="true" android:singleLine="true" />
		<EditTextPreference android:key="LOCAL_DOMAIN"
			android:title="@string/preference_local_domain" android:summary="@string/preference_local_domain_summary"
			android:defaultValue="urjc.es" android:singleLine="true" />
	</PreferenceCategory>
	<PreferenceCategory android:title="Proxy Preferences">
		<EditTextPreference android:key="PROXY_IP"
			android:title="@string/preference_proxy_ip" android:summary="@string/preference_proxy_ip_summary"
			android:defaultValue="193.147.51.17" android:singleLine="true" />
		<EditTextPreference android:key="PROXY_PORT"
			android:title="@string/preference_proxy_port" android:summary="@string/preference_proxy_port_summary"
			android:defaultValue="5060" android:singleLine="true"
			android:inputType="number" />
	</PreferenceCategory>
</PreferenceScreen>