<menu xmlns:android="http://schemas.android.com/apk/res/android"
	android:name="Context Menu">

	<item android:icon="@drawable/ic_menu_preferences" android:title="@string/txt_preferences"
		android:id="@+id/menu_preferences">
		<menu>
			<item android:icon="@drawable/ic_menu_preferences"
				android:title="@string/txt_conection_preferences" android:id="@+id/menu_conection_preferences"></item>
			<item android:icon="@drawable/ic_menu_preferences"
				android:title="@string/txt_video_preferences" android:id="@+id/menu_video_preferences"></item>

			<!-- <group android:checkableBehavior="single"> <item android:id="@+id/menu_send_rtp" 
				android:title="@string/txt_send_RTP" android:checked="true" /> <item android:id="@+id/menu_record" 
				android:title="@string/txt_record" /> </group> -->
		</menu>
	</item>

	<item android:icon="@drawable/ic_menu_exit" android:title="@string/txt_exit"
		android:id="@+id/menu_exit"></item>
	<item android:icon="@drawable/menu_info_icon" android:title="@string/txt_menu_about"
		android:id="@+id/menu_about"></item>
</menu>
